css/style.css
body {
    text-align: center;
    background-color: linen;
    font-family: Georgia, serif;
    padding-left: 1em;
    padding-right: 1em;
}

.leaflet-tooltip {
    padding-top: 0px;
}

.vis-container {
    display: inline-block;
    margin: 10px 0px 0px 0px;
}

#city-vis-legend {
    position: relative;
    height: 700px;
}

#legend-svg {
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
}

#city-vis-container {
    margin-left: -100px;
    width: 30vw;
    height: 650px;
    border: 1px solid black;
}

#parallel-plot-container {
    position: relative;
    height: 700px;
    width: 40vw
}

#parallel-plot {
    position: absolute;
    top: 0;
    left: 0;
}

@media (min-width: 1200px) {
    .container{
        max-width: 1200px;
    }
}

.btn-secondary:not(:disabled):not(.disabled).active, .btn-secondary:not(:disabled):not(.disabled):active, .show>.btn-secondary.dropdown-toggle {
    color: black;
    background-color: white;
    border-color: #4e555b;
}

.btn-secondary {
    color: #fff;
    border-color: #6c757d;
    background-color: purple;
}

#visualizations {
    padding-top: 20px
}

